<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.xiaomisum</groupId>
    <artifactId>robotest-server</artifactId>
    <version>0.0.1</version>
    <packaging>jar</packaging>

    <name>${project.artifactId}</name>
    <description>Robotest 测试平台 后端服务</description>

    <properties>
        <migoo.framework.version>1.3.18</migoo.framework.version>

        <ryze.version>6.1.1</ryze.version>
        <swagger-parser.version>2.1.22</swagger-parser.version>
        <springdoc.version>3.1.1</springdoc.version>

        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>xyz.migoo.springboot</groupId>
                <artifactId>migoo-framework-dependencies</artifactId>
                <version>${migoo.framework.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>xyz.migoo.springboot</groupId>
            <artifactId>migoo-spring-boot-starter-common</artifactId>
        </dependency>

        <!-- Ryze 执行引擎（基础设施详细设计 6.2，平台模型 → Ryze TestSuite JSON 实时转换执行） -->
        <dependency>
            <groupId>io.github.xiaomisum</groupId>
            <artifactId>ryze</artifactId>
            <version>${ryze.version}</version>
        </dependency>

        <!-- Swagger/OpenAPI 2.0/3.0 官方解析器（接口管理详细设计 6.1/6.3，导入唯一新增外部依赖）
         排除 javax 版 swagger-core/models/annotations：与 springdoc 的 jakarta 版同 FQN 冲突，
         且 javax 版引用 JDK 已移除的 javax.xml.bind，运行期 NoClassDefFoundError -->
        <dependency>
            <groupId>io.swagger.parser.v3</groupId>
            <artifactId>swagger-parser</artifactId>
            <version>${swagger-parser.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>io.swagger.core.v3</groupId>
                    <artifactId>swagger-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.swagger.core.v3</groupId>
                    <artifactId>swagger-models</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.swagger.core.v3</groupId>
                    <artifactId>swagger-annotations</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- OpenAPI JSON 自动生成（仅 spec，无 Swagger UI；springdoc v3 适配 Spring Boot 4.x） -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
            <version>${springdoc.version}</version>
        </dependency>

        <dependency>
            <groupId>xyz.migoo.springboot</groupId>
            <artifactId>migoo-spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>xyz.migoo.springboot</groupId>
            <artifactId>migoo-spring-boot-starter-security</artifactId>
        </dependency>

        <dependency>
            <groupId>xyz.migoo.springboot</groupId>
            <artifactId>migoo-spring-boot-starter-mybatis</artifactId>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>xyz.migoo.springboot</groupId>
            <artifactId>migoo-spring-boot-starter-redis</artifactId>
        </dependency>

        <dependency>
            <groupId>xyz.migoo.springboot</groupId>
            <artifactId>migoo-spring-boot-starter-websocket</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
        </dependency>

        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>


    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>io.github.xiaomisum.robotest.RobotestServer</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <profiles>
        <!-- 本地开发（默认激活） -->
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <!-- 分离部署生产构建（方案A）：产物为纯后端 jar -->
        <profile>
            <id>prod</id>
        </profile>
        <!-- 合并打包部署构建（方案B）：static/ 已由 scripts/deploy-merged.sh 复制前端产物，
             打包前校验 index.html 存在，防止漏复制打出无前端资源的空 jar -->

    </profiles>

    <repositories>
        <repository>
            <id>jcenter</id>
            <url>https://jcenter.bintray.com/</url>
        </repository>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>
</project>
